fix: change for loop to iterate over length of transition queue